--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.3",
     "@panter/vue-i18next": "^0.15.2",
+    "@vue/compat": "^3.2.6",
     "compare-versions": "^3.6.0",
     "css-vars-ponyfill": "^2.4.6",
     "event-emitter": "^0.3.5",
@@ -33,7 +34,8 @@
     "murmurhash3js": "^3.0.1",
     "strftime": "^0.10.0",
     "tinycon": "^0.6.8",
-    "vue": "^2.6.14",
+    "vue": "^3.1.0",
+    "vue-loader": "^16.5.0",
     "vue-virtual-scroller": "^1.0.10",
     "whatwg-fetch": "^3.6.2",
     "xhr": "^2.6.0"
@@ -43,18 +45,19 @@
     "@vue/cli-plugin-eslint": "~4.5.13",
     "@vue/cli-plugin-unit-jest": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
+    "@vue/compiler-sfc": "^3.2.6",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/test-utils": "1.2.2",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^6.4.1",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-rulesdir": "^0.2.0",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-vue": "^7.17.0",
     "html-loader": "^1.3.2",
     "jsdoc": "^3.6.7",
     "less": "^3.13.1",
@@ -64,8 +67,6 @@
     "postcss-url": "^9.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-webpack-plugin": "2.2.2",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "stylelint-webpack-plugin": "2.2.2"
   }
 }
