--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "gendocs": "rm -rf srcdocs/ && jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.16.3",
+    "@babel/runtime-corejs3": "^7.20.6",
     "@panter/vue-i18next": "^0.15.2",
     "compare-versions": "^3.6.0",
-    "css-vars-ponyfill": "^2.4.7",
+    "css-vars-ponyfill": "^2.4.8",
     "event-emitter": "^0.3.5",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack-4": "^1.0.0",
@@ -26,38 +26,38 @@
     "i18next": "^20.6.1",
     "i18next-conv": "^10.2.0",
     "i18next-xhr-backend": "^3.2.2",
-    "intersection-observer": "^0.12.0",
+    "intersection-observer": "^0.12.2",
     "ip-regex": "^4.3.0",
     "irc-framework": "^4.12.1",
-    "json5": "^2.2.0",
+    "json5": "^2.2.1",
     "murmurhash3js": "^3.0.1",
-    "sockjs-client": "^1.5.2",
-    "strftime": "^0.10.0",
+    "sockjs-client": "^1.6.1",
+    "strftime": "^0.10.1",
     "tinycon": "^0.6.8",
-    "vue": "^2.6.14",
-    "vue-virtual-scroller": "^1.0.10",
+    "vue": "^2.7.14",
+    "vue-virtual-scroller": "^1.1.2",
     "whatwg-fetch": "^3.6.2",
     "xhr": "^2.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-unit-jest": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.19",
+    "@vue/cli-plugin-eslint": "~4.5.19",
+    "@vue/cli-plugin-unit-jest": "~4.5.19",
+    "@vue/cli-service": "~4.5.19",
     "@vue/eslint-config-airbnb": "^5.3.0",
-    "@vue/test-utils": "1.3.0",
+    "@vue/test-utils": "1.3.3",
     "babel-eslint": "^10.1.0",
     "copy-webpack-plugin": "^6.4.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-rulesdir": "^0.2.1",
     "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.2.2",
     "html-loader": "^1.3.2",
-    "jsdoc": "^3.6.7",
+    "jsdoc": "^3.6.11",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
     "npm-run-all": "^4.1.5",
@@ -65,8 +65,12 @@
     "postcss-url": "^9.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "stylelint-webpack-plugin": "2.3.1",
-    "vue-template-compiler": "^2.6.14",
+    "stylelint-webpack-plugin": "2.4.0",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^4.46.0"
+  },
+  "resolutions": {
+    "@achrinza/node-ipc": "^9.2.6",
+    "eslint-import-resolver-webpack": "^0.13.2"
   }
 }
