--- a/package.json
+++ b/package.json
@@ -1,79 +1,109 @@
 {
   "name": "kiwiirc",
-  "version": "1.7.1",
+  "version": "2.0.0",
   "description": "Web based IRC client",
   "author": "Darren <darren@darrenwhitlen.com>",
   "scripts": {
-    "build": "vue-cli-service build --no-module",
-    "test:unit": "vue-cli-service test:unit",
+    "dev": "node build/commands/dev.js",
+    "build": "node build/commands/build.js",
+    "stats": "node build/commands/build.js --stats",
     "lint": "npm-run-all lint:*",
-    "lint:eslint": "vue-cli-service lint --no-fix",
-    "lint:stylelint": "stylelint \"src/**/*.{vue,htm,html,css,sss,less,scss}\"",
-    "dev": "vue-cli-service serve",
-    "test": "vue-cli-service test:unit",
+    "lint:js": "eslint --ext .js,.vue ./",
+    "lint:style": "stylelint \"./src/**/*.{vue,html,css,less,scss,sass}\"",
+    "test": "jest",
     "gendocs": "rm -rf srcdocs/ && jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.22.6",
-    "@panter/vue-i18next": "^0.15.2",
+    "@babel/runtime-corejs3": "^7.23.2",
     "buffer": "^6.0.3",
-    "compare-versions": "^5.0.3",
+    "compare-versions": "^6.1.0",
     "event-emitter": "^0.3.5",
+    "eventemitter3": "^5.0.1",
     "font-awesome": "^4.7.0",
-    "htmlparser2": "^8.0.2",
-    "i18next": "^22.5.1",
-    "i18next-http-backend": "^v2.2.1",
-    "intersection-observer": "^0.12.2",
+    "htmlparser2": "^9.0.0",
+    "i18next": "^23.7.6",
+    "i18next-http-backend": "^v2.4.1",
+    "i18next-vue": "^3.0.0",
     "ip-regex": "^4.3.0",
     "irc-framework": "^4.13.1",
     "json5": "^2.2.3",
+    "lodash": "^4.17.21",
     "murmurhash3js": "^3.0.1",
     "sockjs-client": "^1.6.1",
     "stream-browserify": "^3.0.0",
     "strftime": "^0.10.2",
     "tinycon": "^0.6.8",
-    "vue": "^2.7.14",
-    "vue-virtual-scroller": "^1.1.2",
-    "whatwg-fetch": "^3.6.17",
+    "vue": "^3.3.8",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "whatwg-fetch": "^3.6.19",
     "xhr": "^2.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/eslint-parser": "^7.22.9",
-    "@babel/plugin-transform-runtime": "^7.22.9",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-plugin-unit-jest": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/test-utils": "1.3.6",
-    "@vue/vue2-jest": "^27.0.0",
-    "babel-jest": "^27.5.1",
+    "@babel/core": "^7.23.3",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-runtime": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@kiwiirc/eslint-plugin": "file:./build/plugins/eslint-rules/",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+    "@vue/eslint-config-airbnb": "^7.0.0",
+    "@vue/vue3-jest": "^29.2.6",
+    "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "chalk": "^4.1.2",
+    "cliui": "^8.0.1",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-rulesdir": "^0.2.2",
-    "eslint-plugin-standard": "^4.1.0",
-    "eslint-plugin-vue": "^8.7.1",
-    "eslint-plugin-vuejs-accessibility": "^1.2.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.53.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-formatter-friendly": "^7.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^46.9.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.18.1",
+    "eslint-plugin-vuejs-accessibility": "^2.2.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "i18next-conv": "^12.1.1",
-    "jest": "^27.5.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "jsdoc": "^4.0.2",
-    "less": "^4.1.3",
+    "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
+    "ora": "^5.4.1",
+    "portfinder": "^1.0.32",
+    "postcss": "^8.4.31",
     "postcss-html": "^1.5.0",
-    "postcss-import": "^12.0.1",
-    "postcss-url": "^9.0.0",
-    "stylelint": "^14.16.1",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-webpack-plugin": "3.3.0",
-    "vue-template-compiler": "^2.7.14",
-    "webpack": "^5.88.2"
+    "postcss-less": "^6.0.0",
+    "postcss-loader": "^7.3.3",
+    "postcss-scss": "^4.0.9",
+    "prettier": "2.8.8",
+    "prettier-plugin-jsdoc": "^0.4.2",
+    "rimraf": "^5.0.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-order": "^6.0.3",
+    "vue-eslint-parser": "^9.3.2",
+    "vue-loader": "^17.3.1",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
