--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.24.8",
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-regular-svg-icons": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
         "buffer": "^6.0.3",
         "compare-versions": "^6.1.1",
         "css-vars-ponyfill": "^2.4.9",
         "event-emitter": "^0.3.5",
         "eventemitter3": "^5.0.1",
-        "font-awesome": "^4.7.0",
         "htmlparser2": "^9.1.0",
         "i18next": "^23.12.2",
         "i18next-http-backend": "^v2.5.2",
