--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/runtime-corejs3": "^7.22.6",
     "@panter/vue-i18next": "^0.15.2",
     "buffer": "^6.0.3",
+    "callsite": "^1.0.0",
     "compare-versions": "^5.0.3",
     "event-emitter": "^0.3.5",
     "font-awesome": "^4.7.0",
@@ -32,6 +33,7 @@
     "stream-browserify": "^3.0.0",
     "strftime": "^0.10.2",
     "tinycon": "^0.6.8",
+    "uuid": "^10.0.0",
     "vue": "^2.7.14",
     "vue-virtual-scroller": "^1.1.2",
     "whatwg-fetch": "^3.6.17",
