--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "chalk": "^4.1.2",
         "compression-webpack-plugin": "^11.1.0",
         "copy-webpack-plugin": "^12.0.2",
+        "callsite": "^1.0.0",
         "css-loader": "^7.1.2",
         "css-minimizer-webpack-plugin": "^7.0.0",
         "dotenv": "^16.4.5",
@@ -100,10 +101,10 @@
         "stylelint": "^16.7.0",
         "stylelint-config-recess-order": "^5.0.1",
         "stylelint-config-recommended": "^14.0.1",
+        "stylelint-config-recommended-scss": "^14.1.0",
         "stylelint-config-recommended-vue": "^1.5.0",
         "stylelint-config-standard": "^36.0.1",
         "stylelint-config-standard-scss": "^13.1.0",
-        "stylelint-config-recommended-scss": "^14.1.0",
         "stylelint-order": "^6.0.4",
         "stylelint-webpack-plugin": "5.0.1",
         "vue-eslint-parser": "^8.3.0",
